# ChangeLog for games-fps/vavoom
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Oct 2007; Davide Cendron (scen) <scen@gentoo.org>
  -files/1.24-vulnerabilities.patch, -vavoom-1.24-r1.ebuild,
  +vavoom-1.25.ebuild, vavoom-9999.ebuild:
  Version bump (and updated dependencies for SVN live ebuild)

  01 Oct 2007; Davide Cendron (scen) <scen@gentoo.org>
  +files/1.24-vulnerabilities.patch, -vavoom-1.24.ebuild,
  +vavoom-1.24-r1.ebuild:
  Revision bump for security fixes (thanks to Robert Buchholz <rbu at gentoo
  dot org> for reporting)

  21 Aug 2007; Davide Cendron (scen) <scen@gentoo.org> vavoom-9999.ebuild:
  Install also proper graphical launcher icon

  08 Aug 2007; Davide Cendron (scen) <scen@gentoo.org> vavoom-9999.ebuild:
  Added 'wxwindows' USE flag, to enable installation of graphical launcher,
  based on WxWidgets toolkit

  12 Jul 2007; David Shakaryan <omp@gentoo.org> vavoom-1.24.ebuild,
  vavoom-9999.ebuild:
  Place $FILESDIR in quotes; remove die on epatch.

  22 Jun 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  vavoom-9999.ebuild:
  Don't die on epatch failure (it dies itself)

  21 Jun 2007; Davide Cendron (scen) <scen@gentoo.org> vavoom-1.24.ebuild,
  vavoom-9999.ebuild:
  Fixed optional dependency to vavoom-models: now version >=1.4.1 is required

  21 Jun 2007; Davide Cendron (scen) <scen@gentoo.org> vavoom-1.24.ebuild,
  vavoom-9999.ebuild, +files/vavoom-makefile_nowrapper.patch:
  Added patch to get rid of executable wrappers, added 'asm' USE flag

  18 Jun 2007; Davide Cendron (scen) <scen@gentoo.org> vavoom-9999.ebuild:
  Updated ESVN_REPO_URI (like explained in Sourceforge instructions)

  15 Jun 2007; Ali Polatel (hawking) <polatel@gmail.com>
  -vavoom-1.23.1.ebuild:
  Drop old

  14 Jun 2007; Davide Cendron (scen) <scen@gentoo.org> +vavoom-1.24.ebuild:
  Historical version bump: Vavoom celebrates his own 7th years of imp and
  gargoyle fragging, happy birthday! :) )
