@@ -1,6 +1,6 @@
 AUX vavoom-makefile_nowrapper.patch 3235 RMD160 b04e87de8068e2d290387998d34701e2a3a58b30 SHA1 5e5f3b0da0c9ca975cb9606e5684bb5e21e3d7de SHA256 23266e9e536cafb766155d6b6899f358d7dd0489ce61e2b9bec9ec567d0ac7d9
 DIST vavoom-1.25.tar.bz2 1731228 RMD160 fd974a5fabec6501b4683784367f2f616373c55d SHA1 d0ef203ef614318ed6ac0040f8da5d76cf8770d4 SHA256 bba1ac08ff82ca77da684af049ac68fa16dbb099755e41372b82ec6817b140ba
-EBUILD vavoom-1.25.ebuild 7196 RMD160 30305508525b7705f95fccd700f82a9722ac40df SHA1 671b56ded1c4e02a4a45d8b0a45182afac02860c SHA256 8a25d5d2f1e7d767ac39c492ddbbaa951637e3e80cd5561b511dae9e400e887a
+EBUILD vavoom-1.25.ebuild 6386 RMD160 b1e2ac093a462730248a579058eb84982a34075c SHA1 064bf104a55dd144bd48df3879dda6682fa18231 SHA256 0be8da672f77d8cd2efda29541131e0c26f21609e66e7bcd55887f1dd6f02b04
 EBUILD vavoom-9999.ebuild 7259 RMD160 6a890fb7a22767f5e20017f2fcdb6debd29f38fc SHA1 40a8d10cb70374dc3162883cf35825a49aacef5d SHA256 17fb318724357d0fba3132030ef9888b3ed956c75ebdb389ab19d08a842ad384
-MISC ChangeLog 2545 RMD160 5b9087b880e881e48d7700f63d9cb8b1ff0a85d5 SHA1 69fa88672dcfefafdff288cda1aef49804e78dd1 SHA256 33bd6bb32e080693efaae747dc9db09ab6dfa32d1b2473282f2fe1ca1621a093
+MISC ChangeLog 2725 RMD160 c7785ac9752c63e6da3da74aa4d739d4a08b6ad2 SHA1 2394168dedabe0f7e81f3e32f599bcb2188ebe68 SHA256 9f3a1adaa3c4c33dcafae9e33c51e9718c9bb94ad73d997845adef5e98b4740b
 MISC metadata.xml 303 RMD160 626272995441b20fd23b1d0a94603e98b97b0f1e SHA1 f3cae1ec3568e7717d7265a58d0b2e6d8efe88b5 SHA256 334d9b64af3b010a9fcdcbd8736eba2f81ff9d87dee3eb76b5adacb7d48afa37
