@@ -12,7 +12,7 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="allegro asm debug dedicated external-glbsp flac mad mikmod models music
-openal opengl sdl textures tools vorbis wxwindows"
+openal opengl sdl textures tools wxwindows"
 
 QA_EXECSTACK="${GAMES_BINDIR:1}/${PN}"
 
@@ -38,7 +38,7 @@ DEPEND="media-libs/libpng
 	!sdl? ( allegro? ( ${ALLEGDEPEND} ) )
 	!sdl? ( !allegro? ( !dedicated? ( ${OPENGLDEPEND} ) ) )
 	opengl? ( ${OPENGLDEPEND} )
-	vorbis? ( media-libs/libvorbis )
+	music? ( media-libs/libvorbis )
 	flac? ( media-libs/flac )
 	mad? ( media-libs/libmad )
 	mikmod? ( media-libs/libmikmod )
@@ -54,44 +54,40 @@ PDEPEND="models? ( >=games-fps/vavoom-models-1.4.2 )
 dir=${GAMES_DATADIR}/${PN}
 
 pkg_setup() {
+	games_pkg_setup
+
+	# Do some important check ...
+	if use sdl && use allegro ; then
+		echo
+		ewarn "Both 'allegro' and 'sdl' USE flags enabled. Using SDL as default."
+	elif ! use sdl && ! use allegro ; then
+		echo
+		ewarn "Both 'allegro' and 'sdl' USE flags disabled. Using SDL as default."
+	fi
+
+	# Base graphic/sound/music support is enabled?
+	echo
+	einfo "Doing some sanity check..."
+
+	# Graphic/sound/opengl check
 	local backend="media-libs/libsdl"
 
 	if ! use sdl && use allegro ; then
 		backend="media-libs/allegro"
 	fi
 
-	games_pkg_setup
+	local backendflags="X alsa"
 
-	# Do some important check ...
-
-	if use sdl && use allegro ; then
-		echo
-		ewarn "Both 'allegro' and 'sdl' USE flags enabled"
-		ewarn "Set default to SDL"
-	elif ! use sdl && ! use allegro ; then
-		ewarn "Both 'sdl' and 'allegro' USE flags disabled"
-		ewarn "Set default to SDL"
+	if use opengl ; then
+		[[ "${backend}" == "media-libs/libsdl" ]] && backendflags="${backendflags} opengl"
+	else
+		ewarn "'opengl' USE flag disabled. OpenGL is recommended, for best graphics."
 	fi
 
-	# Base graphic/sound/music support is enabled?
-
-	echo
-	einfo "Doing some sanity check..."
-
-	# Graphic check
-	if ! built_with_use ${backend} X ; then
-		echo
-		eerror "Software Graphic support is not configured properly!"
-		eerror "Please rebuild ${backend} with 'X' USE flag enabled"
-		die "graphic support error"
-	fi
-
-	# Sound check
-	if ! built_with_use ${backend} alsa ; then
-		echo
-		eerror "Sound support is not configured properly!"
-		eerror "Please rebuild ${backend} with 'alsa' USE flag enabled"
-		die "sound support error"
+	local msg="Please rebuild ${backend} with ${backendflags} USE flag enabled"
+	if ! built_with_use ${backend} ${backendflags} ; then
+			eerror "${msg}"
+			die ${msg}
 	fi
 
 	# Music check
@@ -100,27 +96,6 @@ pkg_setup() {
 		eerror "MIDI Music support is not configured properly!"
 		eerror "Please rebuild sdl-mixer with USE 'timidity' enabled!"
 		die "music support error"
-	fi
-
-	# OpenGL check
-	if use opengl ; then
-		if [ "${backend}" == "media-libs/libsdl" ] && ! built_with_use ${backend} opengl ; then
-			echo
-			eerror "OpenGL support is not configured properly!"
-			eerror "Please rebuild ${backend} with 'opengl' USE flag enabled"
-			die "opengl support error"
-		fi
-	else
-		echo
-		ewarn "'opengl' USE flag disabled. OpenGL is recommended, for best graphics."
-	fi
-
-	# Does user want external music? Vorbis support is needed
-	if use music && ! use vorbis ; then
-		echo
-		eerror "Ogg/Vorbis support is required for external music playing"
-		eerror "Please enable 'vorbis' USE flag for this package"
-		die "external music support error"
 	fi
 
 	echo
@@ -174,7 +149,7 @@ src_compile() {
 		$(use_with opengl) \
 		$(use_with openal) \
 		$(use_with external-glbsp) \
-		$(use_with vorbis) \
+		$(use_with music vorbis) \
 		$(use_with mad libmad) \
 		$(use_with mikmod) \
 		$(use_with flac) \
@@ -189,8 +164,6 @@ src_compile() {
 		--disable-maintainer-mode \
 		|| die "egamesconf failed"
 
-	# Parallel compiling seems to work (tested on 1.24)
-	# I hope it would be true :P (in case i'll re-enable it later)
 	emake || die "emake failed"
 }
 
